--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -462,36 +462,6 @@ section .container {
   background-color: #1c7d32;
 }
 
-/*--------------------------------------------------------------
-# Interests
---------------------------------------------------------------*/
-.interests .icon-box {
-  display: flex;
-  align-items: center;
-  padding: 20px;
-  background: #09203a;
-  transition: ease-in-out 0.3s;
-}
-
-
-.interests .icon-box i {
-  font-size: 32px;
-  padding-right: 10px;
-  line-height: 1;
-}
-
-.interests .icon-box h3 {
-  font-weight: 700;
-  margin: 0;
-  padding: 0;
-  line-height: 1;
-  font-size: 16px;
-  color: #fff;
-}
-
-.interests .icon-box:hover {
-  background: #042b56eb;
-}
 
 .services .icon-box {
   text-align: center;
@@ -726,11 +696,14 @@ section .container {
 
 
 
+/*--------------------------------------------------------------
+# Contact
+--------------------------------------------------------------*/
 .contact .info-box {
   color: #444444;
   padding: 20px;
   width: 100%;
-  
+  text-align: center; 
 }
 
 .contact .info-box i.bx {
@@ -738,16 +711,14 @@ section .container {
   color: #fff;
   border-radius: 50%;
   padding: 20px;
-  float: left;
-  margin-right: 10px;
-  background: rgba(255, 255, 255, 0.1);
+  background: rgba(255, 255, 255, 0.1); 
+  display: inline-block; 
+  margin-bottom: 10px; 
 }
-
-
 
 .contact .info-box h3 {
   font-size: 20px;
-  color: #28a745;
+  color: #1c7d32; 
   font-weight: 700;
 }
 
@@ -756,12 +727,13 @@ section .container {
   color: #fff;
   line-height: 24px;
   font-size: 14px;
-  margin: 0 0 0 68px;
+  margin: 0;
 }
 
 .contact .info-box .social-links {
-  margin: 5px 0 0 68px;
+  margin: 10px 0 0;
   display: flex;
+  justify-content: center; 
 }
 
 .contact .info-box .social-links a {
@@ -770,10 +742,11 @@ section .container {
   color: #fff;
   line-height: 1;
   transition: 0.3s;
+  margin: 0 5px; 
 }
 
 .contact .info-box .social-links a:hover {
-  color: #12d640;
+  color: #12d640; 
 }
 
 
